--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
 	min-height: 100vh;
+	width: 100%;
 	font-family: sans-serif;
+	position: absolute;
+	background-image: linear-gradient(to right, #8360c3, #2ebf91);
 }
 
 .App-logo {
