--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,11 +1,15 @@
 .home {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	gap: 10px;
-	background-image: linear-gradient(to right, #8360c3, #2ebf91);
+
+	/* display: 'flex', */
+	flex-wrap: wrap;
+	max-width: 100%;
+	/* height: '100%' */
 }
 
 .home .btn-case {
