--- a/src/component/pokemonCard/pokemonCard.css
+++ b/src/component/pokemonCard/pokemonCard.css
@@ -1,7 +1,45 @@
-.list-type {
-	border: 2px solid #8360c3;
-	border-radius: 10px;
-	margin: 0px 2px;
-	padding: 5px 10px;
-	box-shadow: 24;
+.card {
+	width: 100%;
+	height: 100%;
+}
+
+.card:hover {
+	/* background-color: red; */
+	border: 2px solid #ffff;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+		rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.card-header {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 10px;
+
+	background-color: #ffff;
+	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+		rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.card-header span {
+	font-family: 'Courier New', Courier, monospace;
+	font-weight: 600;
+}
+
+.card-header img {
+	border-radius: 50%;
+}
+
+.card .card-content {
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 150px;
+
+	background-color: #ffff;
+}
+
+.card-content img {
+	padding: 20px;
 }
