--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,13 +1,14 @@
 .home {
 	width: 100%;
 	height: 100%;
-	display: flex;
+	display: grid;
+	grid-template-columns: repeat(4, 250px);
 	justify-content: center;
 	align-items: center;
 	gap: 10px;
 
 	/* display: 'flex', */
-	flex-wrap: wrap;
+	/* flex-wrap: wrap; */
 	max-width: 100%;
 	/* height: '100%' */
 }
